--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,61 @@
-click==8.0.1
-Flask==1.1.1
-Flask-WTF==0.14.3
-gunicorn==20.0.4
-importlib-metadata==4.6.1
-itsdangerous==2.0.1
-Jinja2==3.0.1
-joblib==0.14.1
-MarkupSafe==2.0.1
-nltk==3.4.5
-numpy==1.13.3
-pandas==0.25.1
+packaging==21.3
+pandas==1.1.4
+pandocfilters==1.5.0
+parso==0.8.3
+pickleshare==0.7.5
+Pillow==7.1.2
+platformdirs==2.4.1
+prometheus-client==0.12.0
+prompt-toolkit==3.0.24
+protobuf==3.19.1
+py4j==0.10.9.2
+pyarrow==6.0.1
+pycparser==2.21
+pydeck==0.7.1
+Pygments==2.11.1
+Pympler==1.0.1
+pyOpenSSL==21.0.0
+pyparsing==2.4.7
+pyrsistent==0.18.0
+pyspark==3.2.0
 python-dateutil==2.8.1
-pytz==2021.1
+python-magic==0.4.18
+pytz==2020.4
+pytz-deprecation-shim==0.1.0.post0
+pywin32==223
+pywinpty==1.1.6
+pyzmq==22.3.0
+regex==2022.1.18
+requests==2.25.0
 scikit-learn==0.23.1
-scipy==1.2.0
-six==1.16.0
-threadpoolctl==2.2.0
-typing-extensions==3.10.0.0
-Werkzeug==2.0.1
-WTForms==2.3.1
-zipp==3.5.0
+scipy==1.4.1
+Send2Trash==1.8.0
+six==1.15.0
+smmap==5.0.0
+SQLAlchemy==1.3.20
+streamlit==1.3.1
+terminado==0.12.1
+testpath==0.5.0
+threadpoolctl==2.1.0
+toml==0.10.2
+toolz==0.11.2
+tornado==6.1
+touch==2020.12.3
+tqdm==4.62.3
+traitlets==5.1.1
+typing-extensions==4.0.1
+tzdata==2021.5
+tzlocal==4.1
+Unidecode==1.3.2
+urllib3==1.26.2
+validators==0.18.2
+values==2020.12.3
+virtualenv==20.13.0
+watchdog==2.1.6
+wcwidth==0.2.5
+webencodings==0.5.1
+Werkzeug==2.0.2
+widgetsnbextension==3.5.2
+wordcloud==1.7.0
+xgboost==1.1.1
+zipp==3.7.0
